# appdaemon-docs-server

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  tox.toml
server/: main.py  run-dev.py
server/generators/: batch_doc_generator.py  diagram_generator.py  doc_generator.py  flow_extractors.py
server/parsers/: appdaemon_parser.py
server/processors/: __init__.py  markdown.py
server/services/: __init__.py  docs.py
server/static/: .gitkeep
server/templates/: document.html  index.html
server/tests/: conftest.py  test_doc_generation.py  test_file_watcher.py
server/tests/api/: test_doc_generation.py  test_file_watcher.py  test_generate_index.py  test_http_endpoints_additional.py  test_main.py  test_main_additional_coverage.py  test_main_error_and_status_paths.py  test_main_generation_endpoints.py  test_main_more_paths.py  test_main_search_watcher_broadcast.py  test_partials_and_app_source_endpoints.py  test_sse.py
server/tests/config/: playwright.config.py
server/tests/generators/: test_batch_doc_generator.py  test_batch_doc_generator_end_to_end.py  test_batch_generator_recursive.py  test_diagram_generator.py  test_diagram_generator_shapes_and_modes.py  test_diagram_generator_styles_and_minimal.py  test_doc_generator.py  test_doc_generator_additional_sections.py  test_doc_generator_branches.py  test_doc_generator_edge_cases.py  test_doc_generator_full.py  test_doc_generator_methods_and_callbacks.py  test_doc_generator_sections_and_details.py
server/tests/parsers/: __init__.py  test_appdaemon_parser.py  test_appdaemon_parser_branches.py  test_appdaemon_parser_entity_resolution.py
server/tests/processors/: __init__.py  test_markdown.py  test_markdown_cache_eviction.py  test_markdown_locking.py
server/tests/services/: test_docs.py
server/tests/ui/: test_basic_ui.py  test_color_contrast.py  test_document_page.py  test_main_page.py
server/tests/utils/: test_utils.py  test_utils_active_apps_no_yaml.py  test_utils_additional_coverage.py  (+4 more)
server/utils/: __init__.py  progress_callbacks.py  utils.py
server/watchers/: __init__.py  file_watcher.py
server/websocket/: websocket_manager.py
(+13 files in other folders)
