[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "--strict-config",
  "--pdbcls=IPython.terminal.debugger:TerminalPdb",
  "-ra",
]

[tool.coverage.run]
omit = ["server/tests/**", "server/run-dev.py"]
source = ["server"]
parallel = true
branch = true

[tool.coverage.report]
fail_under = 65
skip_empty = true
show_missing = true

[tool.coverage.html]
directory = ".tests_coverage"

[project]
name = "docs-server"
version = "1.0.0"
description = "FastAPI-based documentation web server for AppDaemon automation modules with markdown rendering and syntax highlighting"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "fastapi-mcp>=0.2.0",
  "jinja2>=3.1.6",
  "markdown>=3.8.2",
  "pygments>=2.19.2",
  "pyyaml>=6.0.0",
  "uvicorn[standard]>=0.35.0",
  "python-multipart>=0.0.6",
  "watchdog>=4.0.0",
  "websockets>=12.0",
  "rich>=13.0.0",
  "python-dotenv>=1.0.0",
  "types-pyyaml>=6.0.12.20250516",
]

[project.optional-dependencies]
dev = ["mypy>=1.0.0", "ruff>=0.1.0", "pytest>=8.4", "pytest-asyncio>=0.20.0"]
flow_extract = ["code2flow>=2.5.0"]

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[dependency-groups]
dev = [
  "ipdb>=0.13.13",
  "ipython>=9.4.0",
  "types-markdown>=3.8.0.20250708",
  "types-pygments>=2.19.0.20250715",
  "types-pyyaml>=6.0.12.20250516",
  "websockets>=15.0.1",
]
tests = [
  "pytest>=8.4",
  "pytest-cov>=4.1.0",
  "playwright>=1.40.0",
  "pytest-playwright>=0.4.4",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.25.0",
  "pytest-xdist>=3.8.0",
]
